# computer_graphics

./: .gitignore  README.md
opengl/: .gitattributes  CMakeLists.txt  build_windows.bat  execute.sh  install_glfw.bat  源代码详细分析文档.md
opengl/assets/models/: bucket.mtl  cat_for_opengl.mtl  jar.mtl  walk_cat.mtl
opengl/include/glad/: glad.h
opengl/shaders/: phong.vs  shadow_depth.vs  text.fs  text.vs
opengl/src/: Audio.cpp  Audio.h  Game.cpp  Game.h  Player.cpp  Player.h  Shader.h  StaticModel.cpp  StaticModel.h  TextRenderer.cpp  TextRenderer.h  UI.cpp  UI.h  dr_wav.h  glad.c  main.cpp
